--- a/index.html
+++ b/index.html
@@ -1,33 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link 
+  rel="icon"
+  type="image/png" 
+  sizes="32x32" 
+  href="./images/favicon-32x32.png"
+  />
   
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <link rel="stylesheet" href="style.css" type = "text/css">
+  </head>
+  <body>
+    <main>
+      <div class = "container">
+        <div class = "card">
+          <img src="images/image-equilibrium.jpg" class = "image-card"
+          alt="Image of an NFT">
+          <h1 class = "heading">
+          Equilibrium #3429
+          </h1>
+          <p class = "description">
+          Our Equilibrium collection promotes balance and calm.
+          </p>
+          <div class = "details">
+            <img src="images/icon-ethereum.svg" class = "ETH-icon" 
+            alt="ETH icon view">
+            <p class = "ETH-value"> 0.041 ETH</p> 
+            <img src="images/icon-clock.svg" alt="Clock-icon" class = "time-icon"> 
+            <p class = "time-left"> 3 days left</p>
+          </div>
+          <hr>
+          <div>
+            <img src="images/image-avatar.png" alt="Image of creator"
+            class = "creator-image">
+            <span class = "creator">Creation of </span>
+            <span class="creator-name">Spencer Brian</span>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class = "attribution"> Challenge by 
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+          Frontend Mentor
+        </a>
+        . Coded by
+        <a href="https://twitter.com/spencerbrian_">Spencer Brian Baiden</a>.
+      </div>
+    </footer>
+  </body>
 </html>
